--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
     <title>Penguin Fashion</title>
 </head>
 <body>
-    <header>
-        <nav>
-
+    <header class="bg-amber-100 px-36">
+        <nav class="flex justify-between pt-12">
+            <div class="flex">
+                <img src="./icons/penguin.png" alt="">
+                <h1 class="text-2xl font-bold ml-1"><span class="text-green-600">Penguin</span> Fashion</h1>
+            </div>
+            <div class="">
+                <ul class="font-medium flex gap-14">
+                    <li>Home</li>
+                    <li>Product</li>
+                    <li>About us</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
         </nav>
-        <div>
+        <div class="flex justify-between items-center pb-16">
             <div>
-                <h1><span>Be the Penguins</span><br>
+                <h1 class="text-black text-7xl uppercase font-extrabold"><span class="text-amber-400">Be the Penguins</span><br>
                     of Winter</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing 
+                <p class="w-2/3">Lorem Ipsum is simply dummy text of the printing 
                     and typesetting industry.</p>
-                <button>BUY NOW</button>
+                <button class="bg-green-600 text-white font-medium px-8 py-5 rounded-lg mt-2">
+                    <img src="./icons/shopping-cart 1.png" alt="" class="inline h-6 w-6">
+                    BUY NOW</button>
             </div>
             <div>
-
+                <img src="./images/model.png" alt="">
             </div>
         </div>
 
