--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Penguin Fashion</title>
 </head>
 <body>
-    <header class="bg-amber-100 px-36">
-        <nav class="flex justify-between pt-12">
-            <div class="flex">
+    <header class="bg-amber-100">
+        <nav class="flex justify-between pt-12 flex-col lg:flex-row">
+            <div class="flex items-center justify-center">
                 <img src="./icons/penguin.png" alt="">
                 <h1 class="text-2xl font-bold ml-1"><span class="text-green-600">Penguin</span> Fashion</h1>
             </div>
@@ -22,25 +22,70 @@
                 </ul>
             </div>
         </nav>
-        <div class="flex justify-between items-center pb-16">
+        <div class="flex flex-col lg:flex-row justify-between items-center">
             <div>
-                <h1 class="text-black text-7xl uppercase font-extrabold"><span class="text-amber-400">Be the Penguins</span><br>
+                <h1 class="text-black text-3xl lg:text-7xl uppercase font-extrabold"><span class="text-amber-400">Be the Penguins</span><br>
                     of Winter</h1>
-                <p class="w-2/3">Lorem Ipsum is simply dummy text of the printing 
+                <p class="lg:w-2/3">Lorem Ipsum is simply dummy text of the printing 
                     and typesetting industry.</p>
-                <button class="bg-green-600 text-white font-medium px-8 py-5 rounded-lg mt-2">
-                    <img src="./icons/shopping-cart 1.png" alt="" class="inline h-6 w-6">
+                <button class="bg-green-600 text-white font-medium px-4 py-3 rounded-lg mt-2">
+                    <img src="./icons/shopping-cart 1.png" alt="" class="inline">
                     BUY NOW</button>
             </div>
             <div>
                 <img src="./images/model.png" alt="">
             </div>
         </div>
-
     </header>
 
-    <main>
-
+    <main class="lg:px-32 mt-12">
+            <section class="">
+                <h1 class="uppercase text-5xl font-bold">Woman Jacket</h1>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-5">
+                    <div class="">
+                        <div class=" bg-slate-200 rounded-2xl p-5">
+                            <img src="./images/jacket-1.png" alt="">
+                        </div>
+                        <h2 class="text-2xl font-bold">Yellow Coat Jacket </h2>
+                        <p class="lg:w-2/3">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.</p>
+                        <div class="flex justify-between  items-center">
+                            <h2 class="text-4xl font-black text-amber-400">$234</h2>
+                            <button class="bg-green-600 text-white font-medium px-4 py-3 rounded-lg mt-2">
+                                <img src="./icons/shopping-cart 1.png" alt="" class="inline">
+                                BUY NOW</button>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class="bg-slate-200 rounded-2xl p-5">
+                            <img src="./images/jacket-2.png" alt="">
+                        </div>
+                        <h2 class="text-2xl font-bold">Ladies Jacket</h2>
+                        <p class="lg:w-2/3">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.</p>
+                        <div class="flex justify-between items-center">
+                            <h2 class="text-4xl font-black text-amber-400">$234</h2>
+                            <button class="bg-green-600 text-white font-medium px-4 py-3 rounded-lg mt-2">
+                                <img src="./icons/shopping-cart 1.png" alt="" class="inline">
+                                BUY NOW</button>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class="p-5 bg-slate-200 rounded-2xl">
+                            <img src="./images/jacket-3.png" alt="">
+                        </div>
+                        <h2 class="text-2xl font-bold">Ladies Jacket </h2>
+                        <p class="lg:w-2/3">Lorem Ipsum is simply dummy text of the 
+                            printing and typesetting industry.</p>
+                        <div class="flex justify-between items-center">
+                            <h2 class="text-4xl font-black text-amber-400">$234</h2>
+                            <button class="bg-green-600 text-white font-medium px-4 py-3 rounded-lg mt-2">
+                                <img src="./icons/shopping-cart 1.png" alt="" class="inline">
+                                BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
     </main>
 
     <footer>
